--- a/source/_posts/2010-12-11-secret.markdown
+++ b/source/_posts/2010-12-11-secret.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "我能遇见你已经是不可思议了"
 date: 2010-12-11 23:39
 comments: true
-categories: 
+categories: mylife
 ---
 遇到你，是一个美丽的错误。——《不能说的秘密》
 
